30.4.8 (ws)
      - fix drag of measures with slurs/ties
      - fix regression in note head layout
29.4.8 (ws)
      - added selection of key signature to "new" wizard
      - added pickup measure to "new" wizard
28.4.8 (ws)
      - fix measure number style dialog
      - extent tuplet configuration
27.4.8 (ws)
      - make transpose chord names optional
      - added more basic tuplet types (Ctrl+2(duplet) - Ctrl+9 (nonuplet))
      - fix tranposition of chordnames
      - correct enharmonic misspellings in "promenade" demo.
      - fix some clefs in instrument list (David Bolton)
26.4.8 (ws)
      - more harmony fixes
25.4.8 (ws)
      - png export can be configured to be like screen shot or like printout
      - implement Drag&Drop of measures with tuplets
      - remember last "save as" directory
      - lyrics edit mode: if at last column <cursor right> moves to
        next note (syllable)
      - lyrics edit mode: if at column zero <cursor left> moves to
        previous note (syllable)
      - shift+space now position to previous note (syllable) in lyrics
        edit mode
      - fix layout: left margin in measure was too small if first note had
        accidentals (accidentals moved into the margin)
24.4.8 (ws)
      - dont leave editmode when autosave a file
      - dont autosave new created files
      - extend the chord table with some new chords
      - new function: transpose chords
23.4.8 (ws)
      - on popular demand: configurable auto save function
      - layout all after loading style
      - fix special characters in text palette (no flat symbol)
      - fix accidentals #/b in instrument names
21.4.8 (ws)
      - new style option "create courtesy time signatures"
      - can read now MusicXml files with incomplete part-list
      - add style template "leadsheet.mss"
20.4.8 (ws)
      - fixes for harmony import/export
      - misc small fixes for MusicXml import/export
      - added xml testfiles from Reinhold Kainhofer (Lilypond project);