@@ -1,4 +1,5 @@
 30.4.8 (ws)
+      - allow rest to be changed into tuplet
       - fix drag of measures with slurs/ties
       - fix regression in note head layout
 29.4.8 (ws)
